GroupProject/Content/Site.css
/* OM: TODO! Move whatever inline and in view css in this file */
*{
    margin:0;
    padding:0;
}

html {
    height: fit-content;
}

body {
    padding-top: 50px;
    padding-bottom: 20px;
    position: relative;
    padding-top: 0%;
    /*background-color: gainsboro;*/
    margin: 0;
    height: fit-content;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}


/* Custom from here on out */

/* For nav icons start */

.nav li {
    border-radius: 10px;
}

    .nav li a {
        border-radius: 10px;
    }

.nav .active {
    /*background-color: #2a3330;*/
}

.nav li a:active {
    /*background-color: #4f625c !important;*/
}

.nav li a:hover {
    opacity:0.8;
}

.Cart {
    color: inherit;
    background-color: inherit;
    border: hidden;
    border-radius: 10px;
}

    .Cart .active {
        /*background-color: #2a3330;*/
    }

    .Cart:active {
        background-color: #4f625c !important;
    }

    .Cart:hover {
       /* background-color: #617971;*/
    }

    .Cart:focus {
        outline: none;
    }

    .Cart .nav-link {
        pointer-events: none;
        cursor: default;
        text-decoration: none
    }

.modal-content {
    background-color: gainsboro;
}


@media only screen and (max-width: 976px) {
    .nav-search {
        display:none;
    }
}

/* Fix Navbar icons for big screens */

@media only screen and (min-width: 992px) {
    .nav li a {
        height: 60px;
        display: table-cell;
        vertical-align: middle;
    }

    .navbar-brand {
        height: 50px;
        display: table-cell;
        vertical-align: middle;
    }
}
/* Fix Navbar icons for smaller screens */

@media only screen and (max-width: 991px) {
    .nav li {
        height: 60px;
        text-align: center;
        line-height: 40px;
    }

        .nav li .Cart {
            width: 100%;
        }

        .nav li:nth-child(1) {
            margin-top: 5px;
        }
}

/* For nav icons end */

/* For Manage/Orders start */

.hidden {
    display: none;
}

.order-details td {
    vertical-align: baseline;
}

/* For Manage/Orders end */

/*----------------------------------PAVLOS CSS---------------------------*/

.modal-body table thead tbody th td tr {
    display: block;
}

.animatedSuccess {
    background-image: url(https://icons-for-free.com/iconfiles/png/512/complete+done+green+success+valid+icon-1320183462969251652.png);
    background-size: 300px 300px;
    background-repeat: no-repeat;
    background-position: left top;
    padding-top: 290px;
    margin-top: 70px;
    -webkit-animation-duration: 1.5s;
    animation-duration: 1.5s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

.animatedError {
    background-image: url(https://freeiconshop.com/wp-content/uploads/edd/error-flat.png);
    background-size: 280px 280px;
    background-repeat: no-repeat;
    background-position: left top;
    padding-top: 290px;
    margin-top: 70px;
    -webkit-animation-duration: 1.5s;
    animation-duration: 1.5s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

@media only screen and (max-width:767px) {
    #animated-example {
        width: 100%;
        margin-top: -50%;
        background-position: center;
    }

    .ratingResult{
        text-align:center;
    }
}

@-webkit-keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        -webkit-transform: translateY(0);
    }

    40% {
        -webkit-transform: translateY(-30px);
    }

    60% {
        -webkit-transform: translateY(-15px);
    }
}

@keyframes bounce {
    0%, 20%, 50%, 80%, 100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-30px);
    }

    60% {
        transform: translateY(-15px);
    }
}

.bounce {
    -webkit-animation-name: bounce;
    animation-name: bounce;
}
/*--------------------------STAR GIFS REVIEW----------------------------------------*/

.starOff {
    background-image: url("../Images/StarFade.gif");
    width: 30px;
    height: 30px;
    display: inline-block;
}

.starOn {
    background-image: url("../Images/StarGlow.gif");
    width: 30px;
    height: 30px;
    display: inline-block;
}

@media only screen and (max-width:991px) {
    .starOff, .starOn {
        background-size: contain;
        height: 20px;
        width: 20px;
    }
}

@media only screen and (max-width:767px) {
    .starOff, .starOn {
        height: 30px;
        width: 30px;
    }
}

/*---------------------------------------------------------------------------*/
.product-grid {
    font-family: Raleway, sans-serif;
    text-align: center;
    padding: 0 0 172px;
    border: 1px solid rgba(0, 0, 0, .1);
    overflow: hidden;
    position: relative;
    z-index: 1;
    border-radius: 20px;
}

.product-grid2 {
    font-family: Raleway, sans-serif;
    text-align: center;
    padding: 0 0 172px;
    border: 1px solid rgba(0, 0, 0, .1);
    overflow: hidden;
    position: relative;
    z-index: 1;
    height: 205px;
    border-radius: 20px;
    top: 10px;
}

.product-review {
    top: 20px;
    position: relative;
}

#product {
    position: relative;
    top: 30px;
}

.product-grid2 #prodimg {
    top: 130px;
}

.product-grid .product-image {
    position: relative;
    top: 30px;
    transition: all .3s ease 0s
}

    .product-grid .product-image a {
        display: block
    }

    .product-grid .product-image img {
        width: 80%;
        position: center;
    }

.product-grid .pic-1 {
    opacity: 1;
    transition: all .3s ease-out 0s
}

.product-grid:hover .pic-1 {
    opacity: 1
}
/* ... */

